--- a/client/src/index.css
+++ b/client/src/index.css
@@ -291,18 +291,28 @@ i{
   font-size: 12px;
 }
 
-.user-default-profile-pic, .user-profile-image{
+.user-default-avatar, .user-profile-image, .user-selected-avatar{
   width: 50px;
   height: 50px;
   border-radius: 50%;
-  background-color: #e74c3c;
-  color: white;
   font-size: 22px;
   font-weight: bold;
   text-align: center;
   vertical-align: middle;
   line-height: 50px;
 }
+
+.user-default-avatar{
+  background-color: #e74c3c;
+  color: white;
+}
+
+.user-selected-avatar{
+  background-color: #ffffff;
+  color: #e74c3c;
+}
+
+
 .user-start-chat{
   padding: 10px 0px;
 }
@@ -312,4 +322,52 @@ i{
   border-radius: 3px;
   background-color: #e74c3c;
   color: white;
+}
+
+/*******************************************************
+*************CSS STYLES FOR CHAT AREA**************
+********************************************************/
+
+.app-chat-area{
+  background-color: white;
+  width: 70%;
+  padding: 20px 30px;
+  border-radius: 10px;
+}
+
+/*******************************************************
+*************CSS STYLES FOR CHAT AREA HEADER************
+********************************************************/
+.app-chat-area-header{
+    padding: 10px 30px;
+    margin-bottom: 20px;
+    border-bottom: #bbb 1px solid;
+    text-align: right;
+    font-weight: bold;
+    color: #e74c3c;
+}
+
+/*******************************************************
+********CSS FOR SELECTED USER***************************
+********************************************************/
+
+.selected-user{
+  border-bottom: #ccc 1px solid;
+  padding: 10px 10px;
+  color: white;
+  cursor: pointer;
+  background-color: #e74c3c;
+}
+
+.selected-user-avatar{
+  width: 50px;
+  height: 50px;
+  border-radius: 50%;
+  background-color: white;
+  color: #e74c3c;
+  font-size: 22px;
+  font-weight: bold;
+  text-align: center;
+  vertical-align: middle;
+  line-height: 50px;
 }
