add the send message functionality

--- a/client/src/index.css
+++ b/client/src/index.css
@@ -333,6 +333,9 @@ i{
   width: 70%;
   padding: 20px 30px;
   border-radius: 10px;
+  display: flex;
+  flex-direction: column;
+  min-height: 70vh;
 }
 
 /*******************************************************
@@ -370,4 +373,33 @@ i{
   text-align: center;
   vertical-align: middle;
   line-height: 50px;
+}
+
+.main-chat-area{
+  flex: 1
+}
+
+.send-message-div{
+  position: relative;
+}
+
+.send-message-input{
+  width: 100%;
+  height: 40px;
+  padding: 10px 20px;
+  border: none;
+  border-radius: 5px;
+  color: #28282B;
+  border: #ddd 1px solid;
+}
+
+.send-message-btn{
+  position: absolute;
+  right: 10px;
+  font-size: 25px;
+  color: #e74c3c;
+  cursor: pointer;
+  border: none;
+  background-color: transparent;
+  margin-top: 8px;
 }
