--- a/client/src/index.css
+++ b/client/src/index.css
@@ -8,6 +8,11 @@
   font-family: "Poppins", sans-serif;
 }
 
+body{
+  overflow-y: hidden;
+}
+
+
 
 /*******************************************************
 *************CSS STYLES FOR LOGIN & SIGNUP**************
@@ -335,7 +340,7 @@ i{
   border-radius: 10px;
   display: flex;
   flex-direction: column;
-  min-height: 70vh;
+  height: 85vh;
 }
 
 /*******************************************************
@@ -376,11 +381,14 @@ i{
 }
 
 .main-chat-area{
-  flex: 1
+  flex: 1;
+  overflow-y: scroll;
+  padding: 10px 20px;
 }
 
 .send-message-div{
   position: relative;
+  margin-top: 20px;
 }
 
 .send-message-input{
@@ -402,4 +410,81 @@ i{
   border: none;
   background-color: transparent;
   margin-top: 8px;
+}
+
+
+/*******************************************************
+***************CSS FOR CHAT MESSAGES********************
+********************************************************/
+.message-container{
+  display: flex;
+}
+.send-message, .received-message{
+  padding: 10px 20px;
+  margin-top: 5px;
+  border-radius: 10px;
+  font-size: 14px;
+  width: fit-content;
+}
+
+.send-message{ 
+  background-color: #e74c3c;
+  color: white;
+  margin-left: 100px;
+  border-top-right-radius: 0px;
+}
+
+.received-message{ 
+  background-color: #ddd;
+  color: #28282B;
+  margin-right: 100px;
+  border-bottom-left-radius: 0px;
+}
+
+.message-timestamp{
+  width: fit-content;
+  font-size: 13px;
+}
+
+/*****************************************************
+***********CUSTOM SCROLLBAR FOR CHATAREA**************
+******************************************************/
+.main-chat-area::-webkit-scrollbar {
+  width: 5px;
+}
+
+/* Track */
+.main-chat-area::-webkit-scrollbar-track {
+  box-shadow: inset 0 0 2px grey; 
+  border-radius: 10px;
+}
+
+/* Handle */
+.main-chat-area::-webkit-scrollbar-thumb {
+  background: #e74c3c; 
+  border-radius: 10px;
+}
+
+/* Handle on hover */
+.main-chat-area::-webkit-scrollbar-thumb:hover {
+  background: #e74c3c; 
+}
+
+/*****************************************************
+************MEDIA QUERY FOR USER LIST*****************
+******************************************************/
+
+@media only screen and (max-width: 1000px) {
+  .filter-user-details {
+    display: none;
+  }
+  .user-search-area {
+      display: none;
+  }
+  .app-sidebar{
+      width: 15%;
+  }
+  .app-chat-area{
+      width: 85%
+  }
 }
