added last message in the userlist

--- a/client/src/index.css
+++ b/client/src/index.css
@@ -446,6 +446,10 @@ i{
   font-size: 13px;
 }
 
+.last-message-timestamp{
+  font-size: 13px;
+}
+
 /*****************************************************
 ***********CUSTOM SCROLLBAR FOR CHATAREA**************
 ******************************************************/
